--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,3 +1,5 @@
+<!-- frontend/index.html -->
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -6,139 +8,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>GAIA 모의고사 복습 사이트</title>
   <style>
-    body {
-      margin: 0;
-      padding: 1rem;
-      font-family: sans-serif;
-      background: #f9f9f9;
-    }
-    .container {
-      max-width: 400px;
-      margin: 0 auto;
-      background: white;
-      padding: 1rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-    h1 {
-      margin: 0 0 0.5rem;
-      font-size: 1.5rem;
-      text-align: center;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-    .home-button {
-      display: flex;
-      align-items: center;
-      cursor: pointer;
-      margin-bottom: 1rem;
-      font-size: 16px;
-      color: #007bff;
-    }
-    .home-button img {
-      width: 16px;
-      height: 16px;
-      margin-right: 0.25rem;
-    }
-    input, select, button {
-      display: block;
-      width: 100%;
-      padding: 0.75rem;
-      font-size: 1rem;
-      margin: 0.5rem 0;
-      box-sizing: border-box;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      background: #007bff;
-      color: white;
-      border: none;
-    }
-    p.error {
-      color: #d00;
-      font-size: 0.9rem;
-      margin: 0.25rem 0 0;
-    }
-    /* 메뉴 버튼 */
-    .menu-button {
-      background: #28a745;
-      margin-bottom: 0.75rem;
-      color: white;
-      font-size: 1rem;
-    }
-    .menu-button:nth-child(2) { background: #ffc107; }
-    .menu-button:nth-child(3) { background: #dc3545; }
-    /* 리포트 카드 이미지 */
-    .report-img {
-      display: block;
-      max-width: 100%;
-      margin: 0 auto;
-    }
-    /* GIF (로그인/메인 페이지 상단 로고) */
-    .top-gif {
-      display: block;
-      width: 60%;
-      max-width: 200px;
-      margin: 0 auto 1rem;
-    }
-    /* 각 섹션 숨김/보이기 */
-    .hidden { display: none; }
-
-    /* 2. 틀린 문제 다시 풀기 영역 */
-    #reviewContainer {
-      text-align: center;
-    }
-    #reviewContainer img {
-      max-width: 100%;
-      margin-bottom: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    /* (추후 추가될 O/X 퀴즈용 버튼 스타일) */
-    .choice-button {
-      display: inline-block;
-      width: 18%;
-      margin: 1%;
-      padding: 0.75rem 0;
-      font-size: 1rem;
-      border: 1px solid #007bff;
-      border-radius: 4px;
-      background: white;
-      color: #007bff;
-      cursor: pointer;
-    }
-    .choice-button.correct { background: #28a745; color: white; }
-    .choice-button.wrong { background: #dc3545; color: white; }
+    body { margin:0; padding:1rem; font-family:sans-serif; background:#f9f9f9; }
+    .container { max-width:400px; margin:0 auto; background:white; padding:1rem; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1); }
+    h1 { margin:0 0 .5rem; font-size:1.5rem; text-align:center; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
+    .home-button { display:flex; align-items:center; cursor:pointer; margin-bottom:1rem; font-size:16px; color:#007bff; }
+    .home-button img { width:16px; height:16px; margin-right:.25rem; }
+    input, select, button { display:block; width:100%; padding:.75rem; font-size:1rem; margin:.5rem 0; box-sizing:border-box; border:1px solid #ccc; border-radius:4px; }
+    button { background:#007bff; color:white; border:none; }
+    p.error { color:#d00; font-size:.9rem; margin:.25rem 0 0; }
+    .menu-button { background:#28a745; color:white; font-size:1rem; margin-bottom:.75rem; }
+    .menu-button:nth-child(2) { background:#ffc107; }
+    .menu-button:nth-child(3) { background:#dc3545; }
+    .report-img { display:block; max-width:100%; margin:0 auto; }
+    .top-gif { display:block; width:60%; max-width:200px; margin:0 auto 1rem; }
+    .hidden { display:none; }
+    /* 틀린 문제 다시 풀기 */
+    #questionImage { max-width:100%; margin-bottom:1rem; border:1px solid #ccc; border-radius:4px; }
+    #choiceButtons button { display:inline-block; width:18%; margin:1%; padding:.75rem 0; font-size:1rem; border:1px solid #007bff; border-radius:4px; background:white; color:#007bff; }
+    #skipButton { display:block; margin:1rem auto; padding:.75rem; }
+    #feedback { font-size:1rem; margin-top:.5rem; }
   </style>
 </head>
 <body>
   <div class="container">
-    <!-- “처음으로” 버튼 (로그인/메인 제외 나머지 페이지에서만 JS 제어) -->
     <div id="homeButton" class="home-button hidden">
-      <img src="icons/home.png" alt="Home 아이콘">
-      <span>처음으로</span>
+      <img src="icons/home.png" alt="Home"> <span>처음으로</span>
     </div>
-
-    <!-- ① 로그인 페이지 -->
     <div id="loginSection">
       <h1>GAIA 모의고사 복습 사이트</h1>
-      <img src="globe.gif" alt="Globe 로고" class="top-gif">
-      <input type="text" id="loginId" placeholder="리클래스 ID 입력">
+      <img src="globe.gif" class="top-gif" alt="Globe">
+      <input id="loginId" placeholder="리클래스 ID 입력">
       <button id="loginBtn">로그인</button>
       <p id="loginMsg" class="error"></p>
     </div>
-
-    <!-- ② 회차 선택 페이지 -->
     <div id="examSection" class="hidden">
       <h1>GAIA 모의고사 복습 사이트</h1>
       <select id="examSelect"></select>
       <button id="examBtn">회차 선택</button>
       <p id="examMsg" class="error"></p>
     </div>
-
-    <!-- ③ 메뉴 페이지 -->
     <div id="menuSection" class="hidden">
       <h1>GAIA 모의고사 복습 사이트</h1>
       <button id="menuReport" class="menu-button">1. 내 성적표 확인</button>
@@ -146,172 +54,141 @@
       <button id="menuQuiz" class="menu-button">3. 틀린 문제 O/X 퀴즈</button>
       <p id="menuMsg" class="error"></p>
     </div>
-
-    <!-- ④ 성적표 표시 페이지 -->
     <div id="reportSection" class="hidden">
       <h1>내 성적표</h1>
-      <img id="reportImage" class="report-img" alt="성적표 이미지">
+      <img id="reportImage" class="report-img" alt="성적표">
       <p id="reportMsg" class="error"></p>
     </div>
-
-    <!-- ⑤ 틀린 문제 다시 풀기 페이지 -->
     <div id="reviewSection" class="hidden">
       <h1>틀린 문제 다시 풀기</h1>
-      <div id="reviewContainer">
-        <!-- JS가 동적으로 삽입: 틀린 문제 이미지 목록 -->
-      </div>
+      <img id="questionImage" class="hidden" alt="문제 이미지">
+      <div id="choiceButtons"></div>
+      <button id="skipButton" class="hidden">SKIP</button>
+      <p id="feedback"></p>
       <p id="reviewMsg" class="error"></p>
     </div>
-
-    <!-- ⑥ 틀린 문제 OX 퀴즈 페이지 -->
     <div id="quizSection" class="hidden">
       <h1>틀린 문제 O/X 퀴즈 (준비 중)</h1>
-      <p>구현 예정</p>
     </div>
   </div>
-
   <script>
-    let currentId = '';
-    let currentExam = '';
+    let currentId='', currentExam='';
+    let wrongList=[], currentWrongIndex=0;
 
-    function hideAllSections() {
+    function hideAllSections(){
       ['loginSection','examSection','menuSection','reportSection','reviewSection','quizSection']
-        .forEach(id => document.getElementById(id).classList.add('hidden'));
+        .forEach(id=>document.getElementById(id).classList.add('hidden'));
     }
-    function clearMessages() {
-      ['loginMsg','examMsg','menuMsg','reportMsg','reviewMsg']
-        .forEach(id => document.getElementById(id).textContent = '');
+    function clearMessages(){
+      ['loginMsg','examMsg','menuMsg','reportMsg','reviewMsg','feedback']
+        .forEach(id=>document.getElementById(id).textContent='');
     }
 
-    // 1) 로그인
-    document.getElementById('loginBtn').onclick = () => {
+    // 로그인
+    document.getElementById('loginBtn').onclick=()=>{
       clearMessages();
-      const id = document.getElementById('loginId').value.trim();
-      if (!id) {
-        document.getElementById('loginMsg').textContent = 'ID를 입력하세요';
-        return;
-      }
+      const id=document.getElementById('loginId').value.trim();
+      if(!id){document.getElementById('loginMsg').textContent='ID를 입력하세요';return;}
       fetch(`/api/authenticate?id=${encodeURIComponent(id)}`)
-        .then(res => res.json())
-        .then(data => {
-          if (data.authenticated) {
-            currentId = id;
-            hideAllSections();
-            document.getElementById('examSection').classList.remove('hidden');
-            loadExams(); // ★ 회차 목록 로드
-          } else {
-            document.getElementById('loginMsg').textContent = '인증되지 않은 ID입니다';
-          }
-        })
-        .catch(() => {
-          document.getElementById('loginMsg').textContent = '인증 중 오류가 발생했습니다';
-        });
+      .then(r=>r.json()).then(d=>{
+        if(d.authenticated){
+          currentId=id; hideAllSections();
+          document.getElementById('examSection').classList.remove('hidden');
+          loadExams();
+        } else document.getElementById('loginMsg').textContent='인증되지 않은 ID입니다';
+      }).catch(()=>document.getElementById('loginMsg').textContent='인증 오류');
     };
 
-    // 2) 회차 목록 불러오기
-    function loadExams() {
+    // 회차 로드
+    function loadExams(){
       fetch('/api/exams')
-        .then(res => res.json())
-        .then(exams => {
-          const sel = document.getElementById('examSelect');
-          sel.innerHTML = '';
-          if (!exams.length) {
-            sel.innerHTML = '<option>등록된 회차가 없습니다</option>';
-            return;
-          }
-          exams.forEach(e => {
-            const opt = document.createElement('option');
-            opt.value = e;
-            opt.textContent = e;
-            sel.appendChild(opt);
-          });
-        })
-        .catch(() => {
-          document.getElementById('examMsg').textContent = '회차 목록 로드 실패';
-        });
+      .then(r=>r.json()).then(exams=>{
+        const sel=document.getElementById('examSelect');
+        sel.innerHTML='';
+        if(!exams.length){sel.innerHTML='<option>회차없음</option>';return;}
+        exams.forEach(e=>{let o=new Option(e,e);sel.add(o);});
+      }).catch(()=>document.getElementById('examMsg').textContent='회차 로드 실패');
     }
 
-    document.getElementById('examBtn').onclick = () => {
+    document.getElementById('examBtn').onclick=()=>{
       clearMessages();
-      const exam = document.getElementById('examSelect').value;
-      if (!exam) {
-        document.getElementById('examMsg').textContent = '회차를 선택하세요';
-        return;
-      }
-      fetch(`/api/check_exam?exam=${encodeURIComponent(exam)}&id=${encodeURIComponent(currentId)}`)
-        .then(res => res.json())
-        .then(data => {
-          if (data.registered) {
-            currentExam = exam;
-            hideAllSections();
-            document.getElementById('menuSection').classList.remove('hidden');
-            document.getElementById('homeButton').classList.remove('hidden');
-          } else {
-            document.getElementById('examMsg').textContent = data.error;
-          }
-        })
-        .catch(() => {
-          document.getElementById('examMsg').textContent = '응시 여부 확인 중 오류';
-        });
+      const ex=document.getElementById('examSelect').value;
+      if(!ex){document.getElementById('examMsg').textContent='회차 선택';return;}
+      fetch(`/api/check_exam?exam=${encodeURIComponent(ex)}&id=${encodeURIComponent(currentId)}`)
+      .then(r=>r.json()).then(d=>{
+        if(d.registered){
+          currentExam=ex; hideAllSections();
+          document.getElementById('menuSection').classList.remove('hidden');
+          document.getElementById('homeButton').classList.remove('hidden');
+        } else document.getElementById('examMsg').textContent=d.error;
+      }).catch(()=>document.getElementById('examMsg').textContent='응시 확인 오류');
     };
 
-    // 3) 메뉴 – 성적표
-    document.getElementById('menuReport').onclick = () => {
+    // 성적표
+    document.getElementById('menuReport').onclick=()=>{
       hideAllSections();
       document.getElementById('reportSection').classList.remove('hidden');
       fetch(`/api/reportcard?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
-        .then(res => res.json())
-        .then(data => {
-          if (data.url) {
-            document.getElementById('reportImage').src = data.url;
-            document.getElementById('reportMsg').textContent = '';
-          } else {
-            document.getElementById('reportMsg').textContent = data.error || '성적표를 찾을 수 없습니다.';
-          }
-        })
-        .catch(() => {
-          document.getElementById('reportMsg').textContent = '성적표 로드 오류';
-        });
+      .then(r=>r.json()).then(d=>{
+        if(d.url) document.getElementById('reportImage').src=d.url;
+        else document.getElementById('reportMsg').textContent=d.error;
+      }).catch(()=>document.getElementById('reportMsg').textContent='로드 오류');
     };
 
-    // 4) 메뉴 – 틀린 문제 다시 풀기
-    document.getElementById('menuReview').onclick = () => {
-      hideAllSections();
-      clearMessages();
+    // 틀린 문제 풀기
+    document.getElementById('menuReview').onclick=()=>{
+      hideAllSections(); clearMessages();
       document.getElementById('reviewSection').classList.remove('hidden');
       document.getElementById('homeButton').classList.remove('hidden');
-      const container = document.getElementById('reviewContainer');
-      container.innerHTML = '';
       fetch(`/api/review?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
-        .then(res => res.json())
-        .then(data => {
-          if (data.wrongList && data.wrongList.length) {
-            data.wrongList.forEach(item => {
-              const img = document.createElement('img');
-              img.src = item.image;
-              img.alt = `문항 ${item.question}`;
-              container.appendChild(img);
-            });
-          } else {
-            document.getElementById('reviewMsg').textContent = '틀린 문제가 없습니다.';
-          }
-        })
-        .catch(() => {
-          document.getElementById('reviewMsg').textContent = '불러오기 오류';
-        });
+      .then(r=>r.json()).then(d=>{
+        wrongList=d.wrongList.map(x=>x.question);
+        currentWrongIndex=0;
+        showReviewQuestion(wrongList[0]);
+      }).catch(()=>document.getElementById('reviewMsg').textContent='불러오기 오류');
     };
 
-    // 5) 메뉴 – OX 퀴즈 (준비 중)
-    document.getElementById('menuQuiz').onclick = () => {
+    function showReviewQuestion(qno){
+      clearMessages();
+      document.getElementById('questionImage').src=`/exp_images/${encodeURIComponent(currentExam)}/${qno}.png`;
+      document.getElementById('questionImage').classList.remove('hidden');
+      const cb=document.getElementById('choiceButtons'); cb.innerHTML='';
+      [1,2,3,4,5].forEach(ch=>{
+        const btn=document.createElement('button');
+        btn.textContent=ch; btn.onclick=()=>handleAnswerClick(qno,ch,btn);
+        cb.appendChild(btn);
+      });
+      const skip=document.getElementById('skipButton');
+      skip.classList.remove('hidden'); skip.onclick=nextQuestion;
+    }
+
+    function handleAnswerClick(qno,sel,btn){
+      fetch(`/api/submit_review?exam=${encodeURIComponent(currentExam)}&question=${qno}&answer=${sel}`)
+      .then(r=>r.json()).then(d=>{
+        document.getElementById('feedback').textContent = d.correct?'정답입니다!':'오답입니다.';
+        document.querySelectorAll('#choiceButtons button').forEach(b=>b.disabled=true);
+      }).catch(()=>document.getElementById('feedback').textContent='오류');
+    }
+
+    function nextQuestion(){
+      currentWrongIndex++;
+      if(currentWrongIndex<wrongList.length){
+        showReviewQuestion(wrongList[currentWrongIndex]);
+      } else {
+        location.reload();
+      }
+    }
+
+    // OX 퀴즈(준비 중)
+    document.getElementById('menuQuiz').onclick=()=>{
       hideAllSections();
       document.getElementById('quizSection').classList.remove('hidden');
       document.getElementById('homeButton').classList.remove('hidden');
     };
 
-    // “처음으로” 버튼
-    document.getElementById('homeButton').onclick = () => {
-      hideAllSections();
-      clearMessages();
+    // 홈
+    document.getElementById('homeButton').onclick=()=>{
+      hideAllSections(); clearMessages();
       document.getElementById('menuSection').classList.remove('hidden');
       document.getElementById('homeButton').classList.remove('hidden');
     };
